deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: neodash
  labels:
    app: neodash
spec:
  to:
    kind: Service
    name: neodash
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
